Fixed z-index problems

--- a/src/yearline.css
+++ b/src/yearline.css
@@ -13,6 +13,15 @@
 .timelineHiddenObject{
 	display: none;
 }
+.timelineCat1{
+	z-index:99;
+}
+.timelineCat2{
+	z-index:98;
+}
+.timelineCat3{
+	z-index:97;
+}
 .timelineBringToFront{
-	z-index:10;
+	z-index:100 !important;
 }
